// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should parse /out.svg       {"color_snake":"yellow"} 1`] = `
{
  "animationOptions": {
    "frameDuration": 100,
    "step": 1,
  },
  "drawOptions": {
    "colorDotBorder": "#1b1f230a",
    "colorDots": [
      "#ebedf0",
      "#B6E3FF",
      "#54AEFF",
      "#0969DA",
      "#0A3069",
    ],
    "colorEmpty": "#ebedf0",
    "colorSnake": "yellow",
    "dark": {
      "colorDotBorder": "#1b1f230a",
      "colorDots": [
        "#161b22",
        "#0A3069",
        "#0969DA",
        "#54AEFF",
        "#B6E3FF",
      ],
      "colorEmpty": "#161b22",
      "colorSnake": "purple",
    },
    "sizeCell": 16,
    "sizeDot": 12,
    "sizeDotBorderRadius": 2,
  },
  "filename": "/out.svg",
  "format": "svg",
}
`;

exports[`should parse /out.svg?.gif.svg?color_snake=orange 1`] = `
{
  "animationOptions": {
    "frameDuration": 100,
    "step": 1,
  },
  "drawOptions": {
    "colorDotBorder": "#1b1f230a",
    "colorDots": [
      "#ebedf0",
      "#B6E3FF",
      "#54AEFF",
      "#0969DA",
      "#0A3069",
    ],
    "colorEmpty": "#ebedf0",
    "colorSnake": "orange",
    "dark": {
      "colorDotBorder": "#1b1f230a",
      "colorDots": [
        "#161b22",
        "#0A3069",
        "#0969DA",
        "#54AEFF",
        "#B6E3FF",
      ],
      "colorEmpty": "#161b22",
      "colorSnake": "purple",
    },
    "sizeCell": 16,
    "sizeDot": 12,
    "sizeDotBorderRadius": 2,
  },
  "filename": "/out.svg?.gif.svg",
  "format": "svg",
}
`;

exports[`should parse /out.svg?{"color_snake":"yellow","color_dots":["#000","#111","#222","#333","#444"]} 1`] = `
{
  "animationOptions": {
    "frameDuration": 100,
    "step": 1,
  },
  "drawOptions": {
    "colorDotBorder": "#1b1f230a",
    "colorDots": [
      "#000",
      "#111",
      "#222",
      "#333",
      "#444",
    ],
    "colorEmpty": "#000",
    "colorSnake": "yellow",
    "dark": undefined,
    "sizeCell": 16,
    "sizeDot": 12,
    "sizeDotBorderRadius": 2,
  },
  "filename": "/out.svg",
  "format": "svg",
}
`;

exports[`should parse /out.svg?color_snake=orange&color_dots=#000,#111,#222,#333,#444 1`] = `
{
  "animationOptions": {
    "frameDuration": 100,
    "step": 1,
  },
  "drawOptions": {
    "colorDotBorder": "#1b1f230a",
    "colorDots": [
      "#000",
      "#111",
      "#222",
      "#333",
      "#444",
    ],
    "colorEmpty": "#000",
    "colorSnake": "orange",
    "dark": undefined,
    "sizeCell": 16,
    "sizeDot": 12,
    "sizeDotBorderRadius": 2,
  },
  "filename": "/out.svg",
  "format": "svg",
}
`;

exports[`should parse /out.svg?color_snake=orange&color_dots=#000,#111,#222,#333,#444&dark_color_dots=#a00,#a11,#a22,#a33,#a44 1`] = `
{
  "animationOptions": {
    "frameDuration": 100,
    "step": 1,
  },
  "drawOptions": {
    "colorDotBorder": "#1b1f230a",
    "colorDots": [
      "#000",
      "#111",
      "#222",
      "#333",
      "#444",
    ],
    "colorEmpty": "#000",
    "colorSnake": "orange",
    "dark": {
      "colorDots": [
        "#a00",
        "#a11",
        "#a22",
        "#a33",
        "#a44",
      ],
      "colorEmpty": "#a00",
    },
    "sizeCell": 16,
    "sizeDot": 12,
    "sizeDotBorderRadius": 2,
  },
  "filename": "/out.svg",
  "format": "svg",
}
`;

exports[`should parse path/to/out.gif 1`] = `
{
  "animationOptions": {
    "frameDuration": 100,
    "step": 1,
  },
  "drawOptions": {
    "colorDotBorder": "#1b1f230a",
    "colorDots": [
      "#ebedf0",
      "#B6E3FF",
      "#54AEFF",
      "#0969DA",
      "#0A3069",
    ],
    "colorEmpty": "#ebedf0",
    "colorSnake": "purple",
    "dark": {
      "colorDotBorder": "#1b1f230a",
      "colorDots": [
        "#161b22",
        "#0A3069",
        "#0969DA",
        "#54AEFF",
        "#B6E3FF",
      ],
      "colorEmpty": "#161b22",
      "colorSnake": "purple",
    },
    "sizeCell": 16,
    "sizeDot": 12,
    "sizeDotBorderRadius": 2,
  },
  "filename": "path/to/out.gif",
  "format": "gif",
}
`;
